2007-10-17  Glenn Morris  <rgm@gnu.org>

	* minibuf.c (Qcompletion_ignore_case): New Lisp_Object.
	(syms_of_minibuf): Add Qcompletion_ignore_case.
	* dired.c (Qcompletion_ignore_case): Change to external.
	(syms_of_dired) [VMS]: Remove Qcompletion_ignore_case.
	* fileio.c (Qcompletion_ignore_case): New external Lisp_Object.
	(Fread_file_name): Use it rather than intern'ing.

	* coding.c (Qcompletion_ignore_case): New external Lisp_Object.
	(Fread_coding_system): Ignore case of user input.

2007-10-16  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xdisp.c (handle_display_prop): Ignore display specs after
	replacing one when string text is being replaced.
	(handle_single_display_spec): Pretend as if characters with display
	property haven't been consumed only when buffer text is being replaced.

2007-10-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xfns.c (Fx_create_frame, Fx_display_list):
	* window.c (window_fixed_size_p, enlarge_window)
	(shrink_window_lowest_first):
	* macterm.c (init_font_name_table):
	* macfns.c (Fx_create_frame, Fx_display_list):
	* lread.c (close_load_descs):
	* keyboard.c (read_char_x_menu_prompt):
	* fns.c (Fmember, Fmemql, Fdelete, Fset_char_table_parent):
	* coding.c (code_convert_region_unwind): Test the type of an object
	rather than just !NILP before extracting data from it.

	* alloc.c (Fpurecopy): Set the pvec tag on pseudo vectors.

	* lisp.h (enum Lisp_Misc_Type): Del Lisp_Misc_Some_Buffer_Local_Value.
	(XMISCANY): New macro.
	(XMISCTYPE): Use it.
	(struct Lisp_Misc_Any): New type.
	(union Lisp_Misc): Use it.
	(struct Lisp_Buffer_Local_Value): Add `local_if_set' bit.
	* data.c (Fboundp, store_symval_forwarding, swap_in_global_binding)
	(find_symbol_value, set_internal, default_value, Fset_default)
	(Fmake_variable_buffer_local, Fmake_local_variable)
	(Fkill_local_variable, Fmake_variable_frame_local, Flocal_variable_p)
	(Flocal_variable_if_set_p, Fvariable_binding_locus):